# game-engine

./: .gitignore  CMakeLists.txt
include/core/: engine.h
include/input/: input.h
include/math/: vec2.h
include/platform/: platform.h  window.h
include/render/: renderer.h
src/: main.cpp
src/core/: engine.cpp
src/input/: input.cpp
src/platform/: platform_sdl.cpp  window_sdl.cpp
src/render/: renderer.cpp
